syntax = "proto3";

package auth;

option java_multiple_files = true;
option java_package = "com.grpc.auth";
option java_generic_services = true;

service AuthService {
  rpc CheckAccessToken(accesstokenchkRequset) returns (accesstokenchkResponse);
}

message accesstokenchkRequset {
  string accesstoken = 1;
}

message accesstokenchkResponse {
  bool chk = 1;
  string user_id = 2;
}